[package]
name = "bbb-docker-wrapper"
version = "0.1.0"
authors = ["Calvin Walton <calvin.walton@kepstin.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
lazy_static = "1.4"

[dependencies.regex]
version = "1"
default-features = false
features = ["std"]

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
codegen-units = 1
